@startuml

title __PHYSICS2D's Class Diagram__\n

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.physics2d {
      class CollisionCircle {
          - x : float
          - y : float
          - radius : int
          {static} - shapeRenderer : ShapeRenderer
          + CollisionCircle()
          + move()
          + resize()
          + collidesWith()
          + collidesWith()
          + getX()
          + getY()
          + getRadius()
          + getTag()
          + setTag()
          + drawCollider()
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.physics2d {
      class CollisionRect {
          - x : float
          - y : float
          - width : int
          - height : int
          {static} - shapeRenderer : ShapeRenderer
          + CollisionRect()
          + move()
          + resize()
          + collidesWith()
          + collidesWith()
          + getX()
          + getY()
          + getWidth()
          + getHeight()
          + getTag()
          + setTag()
          + drawCollider()
      }
    }
  }
  

  package com.madrat.spaceshooter {
    package com.madrat.spaceshooter.physics2d {
      enum colliderTag {
        player
        enemy
        healPowerUp
        ammoPowerUp
        shieldPowerUp
        enemyBullet
        none
      }
    }
  }
  

  CollisionCircle o-- colliderTag : tag
  CollisionRect o-- colliderTag : tag
  CollisionRect +-down- colliderTag


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
